Align fixes

--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@ body {
 }
 
 .clock {
+	position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
 	background: #333333;
 	width: 600px;
 	padding: 30px;
 	text-align: center;
 	border-radius: 10px;
-	margin: 250px 300px
 }
 
 .clock-time {
